# helexa

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agents.md  cortex.example.toml  cortex.spec  helexa-acp.example.toml  helexa-bench.example.toml  helexa-neuron.spec  helexa-router.example.toml  helexa-tools.example.toml  helexa-upstream.example.toml  license.md  models.example.toml  neuron.example.toml  neuron.spec  readme.md  rust-toolchain.toml
.gitea/scripts/: copr-build.sh  generate-rpm-changelog.sh
.gitea/workflows/: ci.yml  (+3 more)
asset/: manifest.yml
bench/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/cortex/: Cargo.toml
crates/cortex-agent/: Cargo.toml
crates/cortex-agent/src/: agent.rs
crates/cortex-cli/: Cargo.toml
crates/cortex-cli/src/: main.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/src/: anthropic.rs  build_info.rs  catalogue.rs  config.rs  discovery.rs  entitlements.rs  error_envelope.rs  harness.rs  lib.rs  metrics.rs  node.rs  openai.rs  responses.rs  source.rs  translate.rs
crates/cortex-gateway/: Cargo.toml
crates/cortex-gateway/src/: anthropic_sse.rs  auth.rs  entitlements_chain.rs  entitlements_local.rs  entitlements_upstream.rs  error.rs  evictor.rs  handlers.rs  lib.rs  metering.rs  metrics.rs  poller.rs  proxy.rs  router.rs  served_usage.rs  state.rs
crates/cortex-gateway/tests/: aliases.rs  anthropic.rs  auth.rs  budget_enforcement.rs  error_envelope.rs  eviction.rs  feasibility_routing.rs  load_routing.rs  metering.rs  metrics.rs  model_cost.rs  model_limits.rs  poller.rs  prompt_prevalidation.rs  proxy_basic.rs  responses.rs  streaming.rs  upstream_chain.rs
crates/cortex-gateway/tests/common/: mod.rs
crates/cortex/src/: cache_state.rs  control_plane.rs  gateway.rs  lib.rs  mesh.rs  observe.rs  orchestrator.rs  portal.rs  shutdown.rs  spec.rs
crates/helexa-acp/: Cargo.toml  README.md
crates/helexa-acp/src/: agent.rs  compaction.rs  config.rs  main.rs  path_util.rs  prompt.rs  qwen3.rs  session.rs  store.rs  tool_runner.rs  tools.rs
crates/helexa-acp/src/provider/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/helexa-bench/: Cargo.toml
crates/helexa-bench/src/: api.rs  client.rs  config.rs  lib.rs  main.rs  report.rs  scenario.rs  store.rs  sweep.rs
crates/helexa-bench/tests/: api.rs  sweep_integration.rs
crates/helexa-cli/: Cargo.toml
crates/helexa-cli/src/: main.rs
crates/helexa-router/: Cargo.toml
crates/helexa-router/src/: catalogue.rs  config.rs  dispatch.rs  error.rs  handlers.rs  lib.rs  main.rs  poller.rs  state.rs
crates/helexa-router/tests/: catalogue.rs  dispatch.rs  skeleton.rs  tls.rs  topology.rs
crates/helexa-stream/: Cargo.toml
crates/helexa-stream/src/: lib.rs
crates/helexa-stream/tests/: streaming.rs
crates/helexa-tools/: Cargo.toml
crates/helexa-tools/src/: config.rs  fetch.rs  lib.rs  main.rs  ssrf.rs
crates/helexa-upstream/: Cargo.toml
crates/helexa-upstream/migrations/: 0001_init.sql
crates/helexa-upstream/src/: authz.rs  config.rs  crypto.rs  db.rs  email.rs  error.rs  handlers.rs  ledger.rs  lib.rs  main.rs  reconcile.rs  state.rs  topup.rs  web.rs
crates/helexa-upstream/tests/: authz_pg.rs  ledger_pg.rs  served_usage_pg.rs  web_pg.rs
crates/neuron/: Cargo.toml  build.rs
crates/neuron/src/: activation.rs  api.rs  config.rs  control_plane.rs  discovery.rs  health.rs  lib.rs  main.rs  process.rs  registry.rs  runtime.rs  startup.rs  version.rs
crates/neuron/src/cuda/: ffi.rs  gdn.cu  gdn.rs  mod.rs
crates/neuron/src/harness/: admission.rs  candle.rs  chat_template.rs  context_limit.rs  engine.rs  llamacpp.rs  mistralrs.rs  mod.rs  prefix_cache.rs  preflight.rs  preprocess.rs  speculative.rs
crates/neuron/src/harness/arch/: mod.rs  qwen3_5.rs
crates/neuron/src/harness/arch/qwen3_5/: decoder.rs  full_attn.rs  linear_attn.rs  mlp.rs  mod.rs  moe.rs  rmsnorm.rs  rope.rs  snapshot.rs  vision.rs
crates/neuron/src/harness/device_worker/: dispatch.rs  jobs.rs  mod.rs
crates/neuron/src/harness/tp/: all_reduce.rs  fused_load.rs  isq.rs  mod.rs  nccl_state.rs  rpc.rs  sharded_linear.rs  tp_linear.rs  tp_qwen3.rs  tp_qwen3_5.rs  worker.rs
crates/neuron/src/wire/: event.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/neuron/tests/: activation.rs  api.rs  candle_lifecycle.rs  numerical_reference.rs  preflight.rs  qwen3_next_parity.rs  shutdown.rs  tp_worker_lifecycle.rs  tp_worker_lifecycle_cuda.rs
crates/neuron/tests/fixtures/numerical/: README.md
crates/neuron/tests/fixtures/numerical/qwen3_5-0.8b-text/: logits.f32  manifest.json
crates/neuron/tests/fixtures/numerical/qwen3_5-0.8b-vision/: logits.f32  manifest.json  visual_out.f32
crates/neuron/tests/fixtures/numerical/qwen3_6-27b-text/: logits.f32  manifest.json
crates/neuron/tests/fixtures/numerical/qwen3_next-tiny/: config.json  generation_config.json  logits.f32  manifest.json
data/: cortex-firewalld.xml  cortex-sysusers.conf  cortex.service  helexa-bench-firewalld.xml  helexa-bench-sysusers.conf  helexa-bench.service  helexa-router-firewalld.xml  helexa-router-sysusers.conf  helexa-router.service  helexa-tools-firewalld.xml  helexa-tools-sysusers.conf  helexa-tools.service  helexa-upstream-firewalld.xml  helexa-upstream-sysusers.conf  helexa-upstream.service  neuron-firewalld.xml  neuron-sysusers.conf  neuron.service
doc/: benchmarks.md  context-limits.md  vision-qwen3_6-spec.md
docs/: architecture.md  dashboard.md  deployment.md  roadmap.md  status.md
helexa.ai/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
rpm/: cortex-prerelease.spec  helexa-bench-prerelease.spec  helexa-neuron-prerelease.spec  helexa-router-prerelease.spec  helexa-tools-prerelease.spec  helexa-upstream-prerelease.spec  rpmmacros
script/: bench.py  ci-cargo-escalate.sh  cortex.sh  deploy.sh  dump_qwen3_next_tiny.py  dump_reference.py  generate-packages-json.py  infra-log-verbosity.sh  infra-setup.sh  neuron.sh  tp-smoke.sh  validate-neuron.sh
spec/: default.json
(+322 files in other folders)
