[workspace]
members = [
    "crates/helexa-cli",
    "crates/cortex",
    "crates/neuron",
    "crates/mesh",
    "crates/protocol",
    "crates/model-runtime",
    "crates/config",
    "crates/util",
    "crates/cache",
]

resolver = "2"

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
