[package]
name = "cortex-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cortex-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
