[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

mesh = { path = "../mesh" }
protocol = { path = "../protocol" }
