[package]
name = "helexa-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helexa"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

cortex = { path = "../cortex" }
neuron = { path = "../neuron" }
config = { path = "../config" }
util = { path = "../util" }
