[package]
name = "helexa-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "helexa-tools"
path = "src/main.rs"

[lib]
name = "helexa_tools"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"
# Readability.js port: article extraction (title + text) from fetched HTML.
dom_smoothie = "0.18"

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
tower = { workspace = true, features = ["util"] }
